--- a/Example.ipynb
+++ b/Example.ipynb
@@ -115,12 +115,12 @@
    ],
    "source": [
     "CELs.entrezgene = ReadAffy(cdfname=\"hgu133plus2hsentrezgcdf\",\n",
-    "                           filenames=c('../data/GSM1154244_2Problema.CEL',\n",
-    "                                       '../data/GSM1154245_2Problema_2.CEL',\n",
-    "                                       '../data/GSM1154246_2Problema_3.CEL',\n",
-    "                                       '../data/GSM1154247_1Control.CEL', \n",
-    "                                       '../data/GSM1154248_1Control_2.CEL',\n",
-    "                                       '../data/GSM1154249_1Control_3.CEL'))\n",
+    "                           filenames=c('/data/CELS/GSM1154244_2Problema.CEL',\n",
+    "                                       '/data/CELS/GSM1154245_2Problema_2.CEL',\n",
+    "                                       '/data/CELS/GSM1154246_2Problema_3.CEL',\n",
+    "                                       '/data/CELS/GSM1154247_1Control.CEL', \n",
+    "                                       '/data/CELS/GSM1154248_1Control_2.CEL',\n",
+    "                                       '/data/CELS/GSM1154249_1Control_3.CEL'))\n",
     "\n",
     "eset.entrezgene = rma(CELs.entrezgene)\n",
     "rma.exprs <- exprs(eset.entrezgene)"
