--- a/Example.ipynb
+++ b/Example.ipynb
@@ -153,7 +153,7 @@
     "allp <- cbind(res2$adjp[order(res2$index),])\n",
     "\n",
     "\n",
-    "# adjp=p.adjust(rawp, method=\"bonferroni\")\n",
+    "adjp=p.adjust(rawp, method=\"bonferroni\")\n",
     "\n",
     "# arraysRMAstats=cbind(rma.exprs[-1,0], adjp)\n",
     "\n",
